examples/test/testpolicy5224.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5224
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key39: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value29
          key1: value17
          key24: value20
      podSelector:
        matchLabels:
          key14: value10
          key7: value11
